# adhd-coach

./: .gitignore  CLAUDE.md  LOCAL_TESTING.md  benchmark.html  benchmark.py  benchmark_details.csv  benchmark_results.json  main.py  pyproject.toml  setup-project.sh  todo-in-the-morning.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup-environment.sh
adhd_env/: README.md  TODO_movement_first_rubric.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  reward.py  test_environment.py  test_with_model.py
adhd_env/server/: Dockerfile  __init__.py  adhd_env_environment.py  app.py
docs/: .HF_SPACES_DEPLOYMENT.md.kate-swp  HF_SPACES_DEPLOYMENT.md  LOCAL_USAGE.md  TODO_post_hackathon.md  reachy_mini_architecture.md
docs/hackathon-2026/: 1-openenv-prep-schedule.md  2-openenv-devcontainer-setup.md  3-local-vs-colab-workflow.md  4-openenv-hackathon-planning.md  5-choosing-grpo-group-size.md  phase2-fri-night-plan.md
docs/hackathon-2026/learning/: openenv-hello-world-flow.md
docs/planning/: 6-colab-gpu-preference.md  CLAUDE.md  TERMINOLOGY-REFERENCE.md
docs/planning/learning/: incremental-rl-sophistication.md  openenv-rl-learning-plan.md  the-basics-of-rl-and-grpo.md
scripts/: run_local_server.sh  test_environment_manual.py  test_local_deployment.sh
src/environment/: __init__.py  adhd_env.py  models.py  reward.py  server.py
